Bugfix: card spacing

--- a/src/styles/components/common/CourseCard.module.scss
+++ b/src/styles/components/common/CourseCard.module.scss
@@ -86,6 +86,7 @@
 .containerLarge {
   width: 21rem;
   height: 12rem;
+  overflow: hidden;
 
   .cardBody {
     width: 21rem;
